# mesh_source

./: .gitignore  CMakeLists.txt  FundamentalMeshAccessors.Ihla  README.md  bilateral.ihla  mean_curvature.ihla  vertex_normal.ihla
Examples/bilateral_denoising/: CMakeLists.txt  bilateral_denoising.hlang  bilateral_denoising.ihla  heartlib.h  iheartmesh.h  main.cpp
Examples/discrete_curvature/: CMakeLists.txt  discrete_curvature  discrete_curvature.hlang  discrete_curvature.ihla  heartlib.h  iheartmesh.h  main.cpp
Examples/display_mesh_files/: CMakeLists.txt  main.cpp
Examples/geodesic_distance/: CMakeLists.txt  geodesic_distance.hlang  geodesic_distance.ihla  heartlib.h  iheartmesh.h  main.cpp
Examples/mass_spring/: CMakeLists.txt  heartlib.h  iheartmesh.h  main.cpp  mass_spring.hlang  mass_spring.ihla
Examples/mean_curvature/: CMakeLists.txt  iheartmesh.h  main.cpp  mean_curvature.ihla
Examples/mesh_deformation/: CMakeLists.txt  heartlib.h  iheartmesh.h  main.cpp  mesh_deformation.hlang
Examples/mesh_parameterization/: CMakeLists.txt  heartlib.h  iheartmesh.h  main.cpp  mesh_parameterization.hlang  mesh_parameterization.ihla
Examples/point_cloud/: CMakeLists.txt  heartlib.h  iheartmesh.h  main.cpp  orientation.h  orientation.hlang  orientation.ihla  point_cloud.hlang  point_cloud.ihla
Examples/polygon_mesh/: CMakeLists.txt  heartlib.h  iheartmesh.h  main.cpp  polygon_mesh.hlang  polygon_mesh.ihla
Examples/tinyad_deformation/: CMakeLists.txt  iheartmesh.h  main.cpp  tinyad_deformation.ihla
Examples/tinyad_example/: CMakeLists.txt  iheartmesh.h  main.cpp  tinyad_example.ihla
Examples/vertex_normal/: CMakeLists.txt  heartlib.h  iheartmesh.h  main.cpp  vertex_normal.hlang  vertex_normal.ihla
Examples/winding_number/: CMakeLists.txt  heartlib.h  iheartmesh.h  main.cpp  winding_number.hlang  winding_number.ihla
examples/bilateral_denoising/: CMakeLists.txt  heartlib.h
examples/discrete_curvature/: CMakeLists.txt  heartlib.h
examples/geodesic_distance/: CMakeLists.txt  geodesic_distance.hlang  heartlib.h  main.cpp
examples/mass_spring/: CMakeLists.txt
examples/mesh_deformation/: CMakeLists.txt  heartlib.h  main.cpp  mesh_deformation.hlang
examples/mesh_parameterization/: CMakeLists.txt  main.cpp
examples/point_cloud/: point_cloud.hlang
examples/polygon_mesh/: heartlib.h
examples/vertex_normal/: CMakeLists.txt  heartlib.h
examples/winding_number/: main.cpp
iheartmesh/: README.md  requirements.freeze.txt
include/: Connectivity.h  MeshHelper.h  PointCloud.h  PolygonMesh.h  Tetrahedron.h  TriangleMesh.h  dec_util.h  type_helper.h
models/: cat_surface.mesh
resource/iheartmesh/: LICENSE  README.md
resource/iheartmesh/iheartla/mesh/Python/: triangle_mesh.py
resource/models/: bunny1k.mesh  bunny1k.ply  bunny_200.mesh  bunny_200.ply  bunny_v263.mesh  bunny_v263.ply  bunny_v524.mesh  bunny_v524.ply  cat_volume.mesh  cube_v729.mesh
resource/src/: TriangleMesh.cpp
src/: Connectivity.cpp  MeshHelper.cpp  PointCloud.cpp  PolygonMesh.cpp  Tetrahedron.cpp  TriangleMesh.cpp  dec_util.cpp  iheartmesh.h  main.cpp
